# ave-test-task

./: .dockerignore  Dockerfile  README.md  docker-compose.yml  main.py  pyproject.toml
.github/workflows/: python-app.yml
app/api/models/: models.py
app/api/schemas/: responses.py
app/api/views/: views.py
app/config/: settings.py
app/core/: settings.py
app/exceptions/: repository_exceptions.py
app/metrics/: api_metrics.py
app/repository/: repo.py
app/services/: storage_service.py
app/storage/: models.py
app/tests/: api_tests.py  conftest.py  redis_factory.py  repo_tests.py  service_tests.py
prometheus_data/: prometheus.yml
